# Katas-in-cpp

./: README.md
BalancedParentheses/: CMakeLists.txt  Readme.md
BalancedParentheses/src/: BalancedParentheses.cpp  BalancedParentheses.hpp  CMakeLists.txt
BalancedParentheses/tests/: BalancedParenthesesTests.cpp  CMakeLists.txt
CombinedNumber/: CMakeLists.txt  Readme.md
CombinedNumber/src/: CMakeLists.txt  CombinedNumberCalculator.cpp  CombinedNumberCalculator.hpp
CombinedNumber/tests/: CMakeLists.txt  CombinedNumberTests.cpp
NumberNames/: CMakeLists.txt  Readme.md
NumberNames/src/: CMakeLists.txt  NumberNamesCalculator.cpp  NumberNamesCalculator.hpp  NumberNamesSpeller.cpp  NumberNamesSpeller.hpp
NumberNames/tests/: CMakeLists.txt  NumberNamesTests.cpp
PrimeFactors/: CMakeLists.txt  Readme.md
PrimeFactors/src/: CMakeLists.txt  PrimeFactorsCalculator.cpp  PrimeFactorsCalculator.hpp
PrimeFactors/tests/: CMakeLists.txt  PrimeFactorsTests.cpp
PrintDiamond/: CMakeLists.txt  Readme.md
PrintDiamond/src/: CMakeLists.txt  DiamondPrinter.cpp  DiamondPrinter.hpp
PrintDiamond/tests/: CMakeLists.txt  DiamondPrinterTests.cpp
RomanNumerals/: CMakeLists.txt  Readme.md
RomanNumerals/src/: CMakeLists.txt  RomanNumeralsConverter.cpp  RomanNumeralsConverter.hpp
RomanNumerals/tests/: CMakeLists.txt  RomanNumeralsConverterTests.cpp
Tennis/: Readme.md  Tennis.sln  Tennis.vcxproj  Tennis.vcxproj.filters
Tennis/src/: TennisMatch.h  TennisMatch.hpp  TennisMatchTests.cpp
